--- a/Django_Docker/static/css/mystyle.css
+++ b/Django_Docker/static/css/mystyle.css
@@ -28,17 +28,34 @@ footer {
     margin-bottom: -1rem;
 }
 
+.my-position-md-absolute, .my-position-lg-absolute {
+    position: static;
+    max-height: 16rem;
+}
+@media (min-width: 992px) {
+    .my-position-lg-absolute {
+        position: absolute;
+        max-height: 100%;
+    }
+}
+@media (min-width: 768px) {
+    .my-position-md-absolute {
+        position: absolute;
+        max-height: 100%;
+    }
+}
 
 .my-btn-common {
     font-weight: bold;
     transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
     box-shadow: 0px 2px 0 rgba(36, 36, 36, 0.2), 2px 4px 6px rgba(33, 37, 41, 0.6);
 }
-.my-btn-common:hover, .my-btn-common:active {
+.my-btn-common:active {
+    transition: none;
     box-shadow: 1px 1px 2px rgba(255, 255, 255, 0.2);
 }
-.my-check .btn-check:disabled + .my-btn-common, .my-btn-common:disabled {
-    transition: all 0.25s cubic-bezier(0.65, 0, 0.076, 1);;
+.my-check .btn-check:disabled + .my-btn-common, .my-btn-common:hover, .my-btn-common:disabled {
+    transition: all 0.25s cubic-bezier(0.65, 0, 0.076, 1);
     box-shadow: 1px 1px 2px rgba(255, 255, 255, 0.2);
 }
 
@@ -308,23 +325,4 @@ button:hover .button-text {
   text-decoration: none;
   text-shadow: -1px -1px 0 #888888;
   transition: all 250ms linear;
-}
-
-.filter-form {
-  border: 1px solid #ccc;
-  border-radius: 5px; /* 角丸 */
-  background-color: #fff;
-  color: #333;
-  padding: 3px;
-}
-
-/* フォーカス時のスタイル */
-.filter-form:focus {
-  outline: none;
-  border-color: #007bff;
-}
-
-/* ホバー時のスタイル */
-.filter-form:hover {
-  border-color: #007bff;
 }
