--- a/Django_Docker/toolkeeper_app/templates/base.html
+++ b/Django_Docker/toolkeeper_app/templates/base.html
@@ -31,14 +31,14 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                             <li class="nav-item"><a class="nav-link {% block active_index %}{% endblock %}" href="{% url 'toolkeeper_app:index' %}">ホーム</a></li>
-                            <li class="nav-item"><a class="nav-link {% block active_inquiry %}{% endblock %}" href="{% url 'toolkeeper_app:inquiry' %}">問い合わせ</a></li>
+                            <li class="nav-item me-lg-3"><a class="nav-link {% block active_inquiry %}{% endblock %}" href="{% url 'toolkeeper_app:inquiry' %}">問い合わせ</a></li>
                             
                             {% if user.is_authenticated %}
-                                <li class="nav-item"><a class="nav-link {% block active_asset_list %}{% endblock %}" href="{% url 'toolkeeper_app:asset_list' %}">管理項目一覧</a></li>
-                                <li class="nav-item ms-lg-3"><a class="nav-link {% block active_group_list %}{% endblock %}" href="{% url 'toolkeeper_app:group_list' %}">グループ一覧</a></li>
-                                <li class="nav-item ms-lg-3"><a class="nav-link" href="{% url 'confirm_logout' %}">ログアウト</a></li>
+                                <li class="nav-item ms-lg-3"><a class="nav-link {% block active_asset_list %}{% endblock %}" href="{% url 'toolkeeper_app:asset_list' %}">管理項目一覧</a></li>
+                                <li class="nav-item"><a class="nav-link {% block active_group_list %}{% endblock %}" href="{% url 'toolkeeper_app:group_list' %}">所属グループ一覧</a></li>
+                                <li class="nav-item ms-lg-2"><a class="nav-link {% block active_logout %}{% endblock %}" href="{% url 'confirm_logout' %}">ログアウト</a></li>
                             {% else %}
-                                <li class="nav-item ms-lg-3"><a class="nav-link {% block active_signup %}{% endblock %}" href="{% url 'account_signup' %}">サインアップ</a></li>
+                                <li class="nav-item ms-lg-2"><a class="nav-link {% block active_signup %}{% endblock %}" href="{% url 'account_signup' %}">サインアップ</a></li>
                                 <li class="nav-item"><a class="nav-link {% block active_login %}{% endblock %}" href="{% url 'account_login' %}">ログイン</a></li>
                             {% endif %}
                         </ul>
