--- a/Django_Docker/toolkeeper_app/templates/common_history_add_js.html
+++ b/Django_Docker/toolkeeper_app/templates/common_history_add_js.html
@@ -13,6 +13,7 @@
     const create = document.getElementById("create").innerText;
 
     const check_list = document.getElementById("check_list");
+    const switch_width = document.getElementById("switch_width");
 
     const box_x_min = Number(document.getElementById("box_x_min").innerText);
     const box_y_min = Number(document.getElementById("box_y_min").innerText);
@@ -25,7 +26,10 @@
     const threshold_conf = Number(document.getElementById("threshold_conf").innerText);
     
     const preview = document.getElementById("preview");
+    const check_ctrl = document.getElementById("check_ctrl");
     const all_check = document.getElementById("all_check");
+    const all_check_out = document.getElementById("all_check_out");
+    
 
     const confirmation = document.getElementById("confirmation");
 
@@ -39,11 +43,11 @@
     canvas.width = x_fix;
     canvas.height = y_fix;
 
-    let x_fit = canvas.width / x_fix;
-    let y_fit = canvas.height / y_fix;
+    // let x_fit = canvas.width / x_fix;
+    // let y_fit = canvas.height / y_fix;
 
-    let x_min_fit = box_x_min;
-    let y_min_fit = box_y_min;
+    // let x_min_fit = box_x_min;
+    // let y_min_fit = box_y_min;
 
 
     // バウンディングボックスの座標を初期化
@@ -55,10 +59,10 @@
 
         if (item_box >= 2 && document.getElementById(`item_${i+1}_x_min`).innerText != "None") {
             box_li[i] = [
-                Number(document.getElementById(`item_${i+1}_x_min`).innerText) - box_x_min,
-                Number(document.getElementById(`item_${i+1}_y_min`).innerText) - box_y_min,
-                Number(document.getElementById(`item_${i+1}_x_max`).innerText) - box_x_min,
-                Number(document.getElementById(`item_${i+1}_y_max`).innerText) - box_y_min,
+                Number(document.getElementById(`item_${i+1}_x_min`).innerText),
+                Number(document.getElementById(`item_${i+1}_y_min`).innerText),
+                Number(document.getElementById(`item_${i+1}_x_max`).innerText),
+                Number(document.getElementById(`item_${i+1}_y_max`).innerText),
                 Number(document.getElementById(`item_${i+1}_conf`).innerText),
             ];
 
@@ -87,26 +91,66 @@
         let w = x_fix / canvas.width;
         let h = y_fix / canvas.height;
         
-        document.getElementById(`id_form-${i}-box_x_min`).value = (box_li[i][0] * w) + box_x_min;
-        document.getElementById(`id_form-${i}-box_y_min`).value = (box_li[i][1] * h) + box_y_min;
-        document.getElementById(`id_form-${i}-box_x_max`).value = (box_li[i][2] * w) + box_x_min;
-        document.getElementById(`id_form-${i}-box_y_max`).value = (box_li[i][3] * h) + box_y_min;
+        document.getElementById(`id_form-${i}-box_x_min`).value = (box_li[i][0] * w);
+        document.getElementById(`id_form-${i}-box_y_min`).value = (box_li[i][1] * h);
+        document.getElementById(`id_form-${i}-box_x_max`).value = (box_li[i][2] * w);
+        document.getElementById(`id_form-${i}-box_y_max`).value = (box_li[i][3] * h);
 
         box_in[i].disabled = false;
         box_in[i].checked = true;
     }
 
+    function switch_scroll() {
+        if (window.innerWidth >= 768) {
+            var max_h = canvas.height - check_ctrl.getBoundingClientRect().height - 16;
+            switch_width.style.width = "auto";
+            check_list.style.marginTop = "auto";
+            // for (let i = 0; i < set.length; i++) {
+            //     document.getElementById(`ctrl_${i}`).style.margin = "auto";
+            // }
+        }
+        else {
+            var max_h = 200;
+            switch_width.style.width = 210 * set.length;
+            check_list.style.marginTop = "30px";
+            // for (let i = 0; i < set.length; i++) {
+            //     document.getElementById(`ctrl_${i}`).style.margin = "auto";
+            // }
+        }
+        check_list.style.height = max_h;
+
+        // for (let i = 0; i < set.length; i++) {
+        //     console.log(window.innerWidth);
+        //     console.log(document.getElementById(`ctrl_${i}`).style.width);
+        // }
+    };
 
     function auto_fit() {
         if (canvas.width != preview.getBoundingClientRect().width.toFixed()) {
             console.log("tttt");
+            
+            // console.log(`preview.width :  ${preview.getBoundingClientRect().width} px`);
+            // console.log(`preview.height: ${preview.getBoundingClientRect().height} px`);
+            // console.log(`canvas.width  :  ${canvas.width} px`);
+            // console.log(`canvas.height : ${canvas.height} px`);
+            // console.log(`x_min_fit: ${x_min_fit.toFixed()} px`);
+            // console.log(`y_min_fit: ${y_min_fit.toFixed()} px`);
+            // console.log(`x_max_fit: ${(x_min_fit + canvas.width).toFixed()} px`);
+            // console.log(`y_max_fit: ${(y_min_fit + canvas.height).toFixed()} px`);
+            // console.log(`width         :  ${(preview.getBoundingClientRect().width / canvas.width)} px`);
+            // console.log(`height        : ${(preview.getBoundingClientRect().height / canvas.height)} px`);
 
             for (let i = 0; i < set.length; i++) {
-                box_li[i][0] *= preview.getBoundingClientRect().width / canvas.width;
-                box_li[i][1] *= preview.getBoundingClientRect().height / canvas.height;
-                box_li[i][2] *= preview.getBoundingClientRect().width / canvas.width;
-                box_li[i][3] *= preview.getBoundingClientRect().height / canvas.height;
-                console.log(box_li[i]);
+                // console.log("b "+box_li[i]);
+                // box_li[i][0] = ((box_li[i][0]) * (preview.getBoundingClientRect().width / canvas.width))-50;
+                // box_li[i][1] = ((box_li[i][1]) * (preview.getBoundingClientRect().height / canvas.height))-50;
+                // box_li[i][2] = ((box_li[i][2] + box_x_min) * (preview.getBoundingClientRect().width / canvas.width))-50;
+                // box_li[i][3] = ((box_li[i][3] + box_y_min) * (preview.getBoundingClientRect().height / canvas.height))-50;
+                box_li[i][0] *= (preview.getBoundingClientRect().width / canvas.width);
+                box_li[i][1] *= (preview.getBoundingClientRect().height / canvas.height);
+                box_li[i][2] *= (preview.getBoundingClientRect().width / canvas.width);
+                box_li[i][3] *= (preview.getBoundingClientRect().height / canvas.height);
+                // console.log("a "+box_li[i]);
             }
 
             canvas.width = preview.getBoundingClientRect().width.toFixed();
@@ -115,41 +159,61 @@
             x_fit = canvas.width / x_fix;
             y_fit = canvas.height / y_fix;
 
-            x_min_fit = box_x_min * x_fit;
-            y_min_fit = box_y_min * y_fit;
+            // x_min_fit = box_x_min * x_fit;
+            // y_min_fit = box_y_min * y_fit;
             
-            check_list.style = `overflow-y: scroll; height: ${canvas.height - all_check.getBoundingClientRect().height - 16};`;
-            ctx.drawImage(image, box_x_min, box_y_min, x_fix, y_fix, x_min_fit, y_min_fit, canvas.width, canvas.height,);
+            // check_list.style = `overflow-y: scroll; height: ${canvas.height - all_check.getBoundingClientRect().height - 16};`;
+            // ctx.drawImage(image, box_x_min, box_y_min, x_fix, y_fix, x_min_fit, y_min_fit, canvas.width, canvas.height,);
+            ctx.drawImage(image, 0, 0, image.width, image.height, 0, 0, canvas.width, canvas.height);
         }
+
+        switch_scroll();
 
         console.log(`preview.width:  ${preview.getBoundingClientRect().width} px`);
         console.log(`preview.height: ${preview.getBoundingClientRect().height} px`);
         console.log(`canvas.width:  ${canvas.width} px`);
         console.log(`canvas.height: ${canvas.height} px`);
-        console.log(`x_min_fit: ${x_min_fit.toFixed()} px`);
-        console.log(`y_min_fit: ${y_min_fit.toFixed()} px`);
-        console.log(`x_max_fit: ${(x_min_fit + canvas.width).toFixed()} px`);
-        console.log(`y_max_fit: ${(y_min_fit + canvas.height).toFixed()} px`);
+        // console.log(`x_min_fit: ${x_min_fit.toFixed()} px`);
+        // console.log(`y_min_fit: ${y_min_fit.toFixed()} px`);
+        // console.log(`x_max_fit: ${(x_min_fit + canvas.width).toFixed()} px`);
+        // console.log(`y_max_fit: ${(y_min_fit + canvas.height).toFixed()} px`);
         
     };
 
 
     function set_confirmation() {
         if (isDrawing) return;
+
         confirmation.innerHTML = null;
+        var div = null;
         for (let i = 0; i < set.length; i++) {
             if (checked[i].innerText != "チェック済み") {
-                if (confirmation.innerHTML) confirmation.innerHTML = `${confirmation.innerHTML}、`;
+                if (confirmation.innerHTML) {
+                    div.innerHTML += "、";
+                    confirmation.appendChild(div);
+                }
                 var tag = document.createElement('span');
                 if (box_li[i][4] > threshold_conf) tag.setAttribute('style', 'color: blue;');
                 else if (box_li[i][4] > 0) tag.setAttribute('style', 'color: orange;');
                 else tag.setAttribute('style', 'color: red;');
                 tag.innerText = `${item_name[i]}`;
-                confirmation.appendChild(tag);
+
+                div = document.createElement('div');
+                div.setAttribute('class', 'd-inline-block');
+                div.appendChild(tag);
+
+                confirmation.appendChild(div);
             }
         }
-        if (confirmation.innerHTML) confirmation.innerHTML = `${confirmation.innerHTML} がチェックされていません。`;
-        else confirmation.innerHTML = '<span style="color: rgb(0, 220, 50)">すべてのアイテム</span> がチェック済みです。';
+        if (confirmation.innerHTML) {
+            confirmation.appendChild(div);
+            confirmation.innerHTML = `${confirmation.innerHTML} <span class="d-block d-sm-inline-block mt-2 mt-sm-0">がチェックされていません。</span>`;
+        } else {
+            div = document.createElement('div');
+            div.setAttribute('class', 'text-center');
+            div.innerHTML = '<span style="color: rgb(0, 220, 50)">すべてのアイテム</span> <span class="d-inline-block">がチェック済みです。</span>';
+            confirmation.appendChild(div);
+        }
     };
 
     
@@ -158,10 +222,11 @@
 
         // キャンバスをクリアして画像を再描画
         ctx.clearRect(0, 0, canvas.width, canvas.height);
-        ctx.drawImage(image, box_x_min, box_y_min, x_fix, y_fix, 0, 0, canvas.width, canvas.height,);
+        ctx.drawImage(image, 0, 0, image.width, image.height, 0, 0, canvas.width, canvas.height);
+        // ctx.drawImage(image, box_x_min, box_y_min, x_fix, y_fix, 0, 0, canvas.width, canvas.height,);
         
         for (let i = 0; i < set.length; i++) {
-            if (i == order) ctx.lineWidth = 2;
+            if (i == order) ctx.lineWidth = 5;
             else ctx.lineWidth = 1;
             
             if (box_li[i][4] > threshold_conf) ctx.strokeStyle = "blue"; // 青い線で描画
@@ -175,7 +240,7 @@
                     220,
                     50
                 )`;
-                if (order == -2) ctx.lineWidth = 2;
+                if (order == -2) ctx.lineWidth = 3;
             }
 
             ctx.strokeRect(
@@ -191,19 +256,19 @@
     // 画像の読み込みが完了したらキャンバスに描画
     image.onload = () => {
 
-        const x_fix = box_x_max - box_x_min;
-        const y_fix = box_y_max - box_y_min;
+        // const x_fix = box_x_max - box_x_min;
+        // const y_fix = box_y_max - box_y_min;
 
-        canvas.width = preview.getBoundingClientRect().width.toFixed();
-        canvas.height = canvas.width * (y_fix / x_fix);
+        canvas.width = image.width;
+        canvas.height = image.height;
 
         let x_fit = canvas.width / x_fix;
         let y_fit = canvas.height / y_fix;
 
-        let x_min_fit = box_x_min * x_fit;
-        let y_min_fit = box_y_min * y_fit;
+        // let x_min_fit = box_x_min * x_fit;
+        // let y_min_fit = box_y_min * y_fit;
 
-        check_list.style = `overflow-y: scroll; height: ${canvas.height - all_check.getBoundingClientRect().height - 16};`;
+        // check_list.style = `overflow-y: scroll; height: ${canvas.height - all_check.getBoundingClientRect().height - 16};`;
 
         for (let i = 0; i < set.length; i++) {
             if (item_box >= 2 && document.getElementById(`item_${i+1}_x_min`).innerText != "None") {
@@ -215,6 +280,8 @@
                 box_li[i][3] *= y_fit;
             }
         }
+        switch_scroll();
+
         draw_box(-1);
     };
 
@@ -241,7 +308,7 @@
 
         // 矩形を青い線で描画
         ctx.strokeStyle = "blue";
-        ctx.lineWidth = 2;
+        ctx.lineWidth = 7;
         ctx.strokeRect(startX, startY, width, height);
     });
 
@@ -331,6 +398,9 @@
         } else {
             checked[i].innerText = "チェック済み";
 
+            box_li[i][4] = 1;
+            document.getElementById(`id_form-${i}-result_class`).value = 1;
+
             auto_set_box(i);
             finish_check(i);
         }
@@ -370,11 +440,49 @@
         finish_check();
     };
 
+    all_check_out.onclick = () => {
+        for (let i = 0; i < set.length; i++) {
+            if (check[i].checked) {
+                document.getElementById(`id_form-${i}-box_x_min`).value = null;
+                document.getElementById(`id_form-${i}-box_y_min`).value = null;
+                document.getElementById(`id_form-${i}-box_x_max`).value = null;
+                document.getElementById(`id_form-${i}-box_y_max`).value = null;
+                
+                check[i].checked = false;
+                checked[i].innerText = "チェック";
+            }
+        }
+        draw_box(-1);
+        finish_check();
+    };
+
     submit.onclick = () => {
         for (let i = 0; i < set.length; i++) {
             if (checked[i].innerText != "チェック済み") {
                 document.getElementById(`id_form-${i}-result_class`).value = 0;
             }
         }
+    };
+
+    
+    const width_xxl = 1400;
+    const width_xl = 1200;
+    const width_lg = 992;
+    const width_md = 768;
+    const width_sm = 576;
+
+    let width_class = window.innerWidth;
+
+    // ウィンドウのリサイズ時にスクロール状態を切り替える
+    window.onresize = () => {
+        if (width_class != width_xxl && window.innerWidth >= width_xxl) width_class = width_xxl;
+        else if (width_class != width_xl && window.innerWidth < width_xxl && window.innerWidth >= width_xl) width_class = width_xl;
+        else if (width_class != width_lg && window.innerWidth < width_xl && window.innerWidth >= width_lg) width_class = width_lg;
+        else if (width_class != width_md && window.innerWidth < width_lg && window.innerWidth >= width_md) width_class = width_md;
+        else if (width_class != width_sm && window.innerWidth < width_md) width_class = width_sm;
+        else return;
+
+        auto_fit();
+        draw_box();
     };
 </script>
